# cpp-process-mining

./: CMakeLists.txt  README.md  cythonTester.ipynb  mim.cpp  mimest  mimest.cpp  mimest.h  mimgen.cpp  mocksequence.txt  model.cpp  utils.cpp  utils.h
learn/: a.out  openFileLineByLine.cpp  openfile  sortmapByValue.cpp  tester.cpp
